GNOME Bugzilla – Bug 679177
housekeeping: Don't leak notification objects
Last modified: 2012-07-03 09:18:37 UTC
Created attachment 217683 [details] [review] patch NotifyNotification objects have to be freed using g_object_unref
Review of attachment 217683 [details] [review]: ::: plugins/housekeeping/gsd-disk-space.c @@ -359,3 @@ - g_signal_connect (notification, - "closed", - G_CALLBACK (on_notification_closed), The indentation changes in this hunk aren't needed.
Created attachment 217887 [details] [review] housekeeping: Don't leak notification objects
Created attachment 217888 [details] [review] updated patch
Unless I'm mistaken, all 3 patches are the exact same.
Created attachment 217913 [details] [review] housekeeping: Don't leak notification objects
Attachment 217913 [details] pushed as 02ad04b - housekeeping: Don't leak notification objects