housekeeping: Don't leak notification objects

https://bugzilla.gnome.org/show_bug.cgi?id=679177